[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Actors/Player/BossWeapons/OpticShield/optic_shield.res" type="SpriteFrames" id=1]
[ext_resource path="res://src/Actors/Player/BossWeapons/OpticShield/Shield.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Player/BossWeapons/OpticShield/OpticShield.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Levels/PitchBlack/X_Lightsource.gd" type="Script" id=4]
[ext_resource path="res://src/Levels/PitchBlack/light.png" type="Texture" id=5]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=6]
[ext_resource path="res://src/Sounds/FX - GenesisLaser.wav" type="AudioStream" id=7]
[ext_resource path="res://src/Sounds/Sunflower - Orb.ogg" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[node name="Shield" type="Node2D"]
script = ExtResource( 2 )
projectile = ExtResource( 3 )

[node name="front_shield" type="AnimatedSprite" parent="."]
z_index = 12
frames = ExtResource( 1 )
animation = "idle"
frame = 6
playing = true

[node name="back_shield" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"
frame = 1
playing = true
flip_h = true

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 24

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
shape = SubResource( 1 )

[node name="light" type="Light2D" parent="."]
scale = Vector2( 6, 3 )
z_index = 277
texture = ExtResource( 5 )
color = Color( 0.690196, 1, 0.698039, 1 )
energy = 0.55
range_layer_min = -2
range_layer_max = -1
script = ExtResource( 4 )

[node name="shot_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -8.0
max_distance = 600.0
attenuation = 1.93187
bus = "SFX"
script = ExtResource( 6 )

[node name="start_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 2.0
autoplay = true
max_distance = 600.0
attenuation = 1.93187
bus = "SFX"
script = ExtResource( 6 )

[connection signal="area_entered" from="area2D" to="." method="_on_area2D_area_entered"]
[connection signal="body_entered" from="area2D" to="." method="_on_area2D_body_entered"]
